# Addle

./: .gitignore  Addle.pro  CMakeLists.txt  Doxyfile  LICENSE  Readme.md  TODO
src/: CMakeLists.txt  main.cpp  servicelocator.cpp  servicelocator.h
src/addle/: CMakeLists.txt  addle.cpp  serviceconfiguration.cpp  serviceconfiguration.h  serviceconfiguration.hpp
src/canvas/: CMakeLists.txt  canvas.qrc  viewport.cpp  viewport.hpp  viewport.qml
src/common/: CMakeLists.txt  common.cpp  compat.hpp  globalconstants.hpp  globals.hpp  servicelocator.cpp  servicelocator.hpp  staticdefinitions.cpp  utils.hpp
src/common/data/: brushid.hpp  brushpathsegment.hpp  brushtipid.hpp  documentbuilder.hpp  formatid.hpp  importexportinfo.hpp  persistentid.hpp  toolid.hpp
src/common/exceptions/: addleexception.cpp  addleexception.hpp  baseaddleexception.cpp  baseaddleexception.hpp  commandlineexceptions.hpp  factoryexception.hpp  fileexception.hpp  fileexceptions.hpp  formatexception.hpp  formatexceptions.hpp  initializeexceptions.hpp  notimplementedexception.hpp  servicelocatorexceptions.hpp  unhandledexception.hpp
src/common/idtypes/: addleid.hpp  brushengineid.hpp  brushid.hpp  formatid.hpp  moduleid.hpp  paletteid.hpp  persistentid.hpp  toolid.hpp
src/common/interfaces/: iaddleexception.hpp  iamqobject.hpp  ifactory.hpp  metaobjectinfo.hpp  traits.hpp
src/common/utilities/: addle_icon.hpp  addle_text.hpp  asynctask.cpp  asynctask.hpp  brushpathsegment.hpp  collatingstring.cpp  collatingstring.hpp  collections.hpp  coordinatedreadwritelock.cpp  coordinatedreadwritelock.hpp  datatree.hpp  debugging.cpp  debugging.hpp  dynamic_qttrid.hpp  errors.cpp  errors.hpp  fileassertions.hpp  generate_tuple_over.hpp  genericeventfilter.hpp  hashfunctions.hpp  heirarchylist.hpp  helpercallback.hpp  idinfo.hpp  indexvariant.cpp  indexvariant.hpp  initializehelper.hpp  iocheck.cpp  iocheck.hpp  keyvaluelist.hpp  lazyvalue.hpp  lockhandle.hpp  math.hpp  mathutils.hpp  metaprogramming.hpp  mplarray.hpp  mplmap.hpp  mplruntime.hpp  multi_array_util.hpp  multiarray.hpp  multirepository.hpp  (+22 more)
src/configure/: configureserviceregistry.cpp  configureserviceregistry.h  serviceregistry.cpp  serviceregistry.h
src/core/: CMakeLists.txt  compat.hpp  core.cpp  core_config.cpp  definitions.cpp
src/core/editing/: brushoperation.cpp  brushoperation.hpp  rasterdiff.cpp  rasterdiff.hpp  rasteroperation.cpp  rasteroperation.hpp  rastersurface.cpp  rastersurface.hpp  rastersurface2.cpp  rastersurface2.hpp
src/core/format/: qtimageformatdriver.cpp  qtimageformatdriver.hpp
src/core/models/: brush.cpp  brush.hpp  brushmodel.cpp  brushmodel.hpp  corebrushbuilders.hpp  corepalettebuilders.hpp  document.cpp  document.hpp  layer.cpp  layer.hpp  layergroup.cpp  layergroup.hpp  palette.cpp  palette.hpp
src/core/presenters/: basedocumentpresenter.cpp  basedocumentpresenter.hpp  canvaspresenter.cpp  canvaspresenter.hpp  colorselectionpresenter.cpp  colorselectionpresenter.hpp  documentpresenter.cpp  documentpresenter.hpp  editorpresenter.cpp  editorpresenter.hpp  errorpresenter.cpp  errorpresenter.hpp  layergrouppresenter.cpp  layergrouppresenter.hpp  layerpresenter.cpp  layerpresenter.hpp  maineditorpresenter.cpp  maineditorpresenter.hpp  messagecontext.cpp  messagecontext.hpp  palettepresenter.cpp  palettepresenter.hpp  viewportpresenter.cpp  viewportpresenter.hpp
src/core/rendering/: renderer.cpp  renderer.hpp  renderstack.cpp  renderstack.hpp
src/core/services/: appearanceservice.cpp  appearanceservice.hpp  applicationservice.cpp  applicationservice.hpp  brushrepository.cpp  brushrepository.hpp  errorservice.cpp  errorservice.hpp  formatservice.cpp  formatservice.hpp  i18nservice.cpp  i18nservice.hpp  servicebase.hpp  taskservice.cpp  taskservice.hpp
src/core/tasks/: loaddocumentfiletask.cpp  loaddocumentfiletask.hpp  taskbase.cpp  taskbase.hpp  taskcontroller.cpp  taskcontroller.hpp
src/drawing/: drawingoperation.h
src/interfaces/drawing/: idrawingoperation.h
src/interfaces/format/: iformatdriver.h  iinputdriver.h  iiodriver.h  ioutputdriver.h
src/interfaces/models/: icanvas.h  idocument.h  ilayer.h
src/interfaces/presenters/: icanvaspresenter.h  ieditorpresenter.h  ieditorviewportpresenter.h
src/interfaces/services/: icanvasservice.h  ifactory.h  ifactoryproduct.h  ifileservice.h  ipreferencesservice.h  iservice.h  iservicelocator.h  iundoservice.h
src/interfaces/undo/: iundoable.h  iundocontext.h
src/models/: canvas.cpp  canvas.h  document.cpp  document.h  layer.cpp  layer.h
src/presenters/: canvaspresenter.cpp  canvaspresenter.h  editorpresenter.cpp  editorpresenter.h  editorviewport.cpp  editorviewport.h  editorviewportpresenter.cpp  editorviewportpresenter.h  viewport.h
src/presenters/helpers/: zoomrotatehelper.cpp  zoomrotatehelper.h
src/presenters/tooloptions/: tooloptionspresenterbase.cpp  tooloptionspresenterbase.h
src/services/: canvasservice.h  fileservice.cpp  fileservice.h  preferencesservice.h  servicebase.h
src/utilities/: initializehelper.h  registerqmetatypes.cpp  registerqmetatypes.h  tfactory.h
src/utilities/exceptions/: exceptionutils.h  initializeexceptions.h
src/views/: editorviewport.cpp  editorviewport.h  editorviewportwidget.h  mainwindow.cpp  mainwindow.h  zoomslider.cpp  zoomslider.h
src/views/graphicsitems/: canvasitem.cpp  canvasitem.h
src/widgetsgui/: CMakeLists.txt  compat.hpp  widgetsgui_config.cpp
src/widgetsgui/canvas/: canvasitem.cpp  canvasitem.hpp  canvasscene.cpp  canvasscene.hpp  docbackgrounditem.cpp  docbackgrounditem.hpp  documentitem.cpp  documentitem.hpp  layeritem.cpp  layeritem.hpp
src/widgetsgui/gvfcanvas/: canvasscene.cpp  canvasscene.hpp  layeritem.cpp  layeritem.hpp  viewportwidget.cpp  viewportwidget.hpp
src/widgetsgui/main/: applicationerrorview.cpp  applicationerrorview.hpp  assetselector.cpp  assetselector.hpp  (+20 more)
tests/: CMakeLists.txt
tests/common/: config3_utest.cpp  datatree_utest.cpp  heirarchylist_utest.cpp  presethelper_utest.cpp  presetmap_utest.cpp  renderroutine_utest.cpp
tests/core/: rastersurface_utest.cpp
(+556 files in other folders)
