# Addle configuration code
# @file
# @copyright Copyright 2020 Eleanor Hawk
# @copyright Modification and distribution permitted under the terms of the
# MIT License. See "LICENSE" for full details.

add_subdirectory(addle)
add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(widgetsgui)
